# credit

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml
credit_system/: settings.py  urls.py
credits/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
credits/migrations/: 0001_initial.py  0002_client_avatar.py
templates/: base.html
templates/credits/: apply_credit.html  clients_list.html  credit_applications_list.html  dashboard.html  edit_profile.html  home.html  manage_applications.html  no_client.html  profile.html  review_application.html  submit_credit.html
templates/registration/: login.html  signup.html
