[tool.poetry]
name = "credit-system"
version = "0.1.0"
description = ""
authors = ["Angelina <angst2003@gmail.com>"]
readme = "README.md"
packages = [{include = "credit_system"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
